--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
+asgiref==3.4.1
+astroid==2.8.3
+colorama==0.4.4
 Django==3.2.8
-mysqlclient==2.0.3
 django-mysql==3.8.1
+djangorestframework==3.12.4
+environ==1.0
+isort==5.9.3
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
+mysqlclient==2.0.3
+platformdirs==2.4.0
+pylint==2.11.1
+pytz==2021.3
+sqlparse==0.4.2
+toml==0.10.2
+typing-extensions==3.10.0.2
+wrapt==1.13.2
