amended API view

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ $RECYCLE.BIN/
 .vscode/
 .history/
 *.code-workspace
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
