--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,59 @@
 asgiref==3.4.1
 astroid==2.8.3
+attrs==21.2.0
 awsebcli==3.20.2
+bcrypt==3.2.0
+blessed==1.19.0
 botocore==1.21.65
+cached-property==1.5.2
 cement==2.8.2
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.7
 colorama==0.4.3
+cryptography==35.0.0
 Django==3.2.8
 django-mysql==3.8.1
 djangorestframework==3.12.4
-environ
+docker==4.4.4
+docker-compose==1.25.5
+dockerpty==0.4.1
+docopt==0.6.2
+environ==1.0
 future==0.16.0
 idna==3.3
 isort==5.9.3
 jmespath==0.10.0
+jsonschema==3.2.0
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
+msql==1.2.2
+mypy==0.910
+mypy-extensions==0.4.3
+mysql-connector-python==8.0.27
 mysqlclient==2.0.3
+paramiko==2.8.0
 pathspec==0.5.9
 platformdirs==2.4.0
+protobuf==3.19.1
+pycparser==2.20
 pylint==2.11.1
-pypiwin32==223
+PyNaCl==1.4.0
+pyrsistent==0.18.0
 python-dateutil==2.8.2
 python-decouple==3.5
 pytz==2021.3
-pywin32==302
 PyYAML==5.4.1
 requests==2.26.0
 semantic-version==2.8.5
 six==1.14.0
 sqlparse==0.4.2
 termcolor==1.1.0
+texttable==1.6.4
 toml==0.10.2
+typed-ast==1.4.3
 typing-extensions==3.10.0.2
 urllib3==1.26.7
 wcwidth==0.1.9
+websocket-client==0.59.0
 wrapt==1.13.2
