added more views; fixed MySQL issues

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -2,3 +2,7 @@ packages:
   yum:
     git: []
     mysql-devel: []
+    MySQL-python: []
+    libmysqlclient-dev: []
+    python-dev: []
+    mysql-server: []
