added more views; fixed MySQL issues

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -2,7 +2,8 @@ packages:
   yum:
     git: []
     mysql-devel: []
-    MySQL-python: []
+#    MySQL-python: []
+    mysql-connector-python: []
     libmysqlclient-dev: []
-    python-dev: []
-    mysql-server: []
+#    python-dev: []
+#    mysql-server: []
