added more views; fixed MySQL issues

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -1,9 +1,11 @@
 packages:
   yum:
     git: []
-    mysql-devel: []
+    mysql-server: []
+    mysql: []
+#    mysql-devel: []
 #    MySQL-python: []
-    mysql-connector-python: []
-    libmysqlclient-dev: []
+#    mysql-connector-python: []
+#    libmysqlclient-dev: []
 #    python-dev: []
 #    mysql-server: []
