added more views; fixed MySQL issues

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -9,3 +9,8 @@ packages:
 #    libmysqlclient-dev: []
 #    python-dev: []
 #    mysql-server: []
+
+# tried and failed
+#    git: []
+#    mysql-server: []
+#    mysql: []
