added more views; fixed MySQL issues

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -1,16 +1,16 @@
-packages:
-  yum:
-    git: []
-    mysql-server: []
-    mysql: []
-#    mysql-devel: []
-#    MySQL-python: []
-#    mysql-connector-python: []
-#    libmysqlclient-dev: []
-#    python-dev: []
-#    mysql-server: []
-
-# tried and failed
+#packages:
+#  yum:
 #    git: []
 #    mysql-server: []
 #    mysql: []
+##    mysql-devel: []
+##    MySQL-python: []
+##    mysql-connector-python: []
+##    libmysqlclient-dev: []
+##    python-dev: []
+##    mysql-server: []
+#
+## tried and failed
+##    git: []
+##    mysql-server: []
+##    mysql: []
