--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,16 @@ services:
       MYSQL_ROOT_PASSWORD: 'password'
     restart: always
     volumes:
-      - ./db_django_test:/var/lib/mysql
+      - ./db_django:/var/lib/mysql
   web:
     build: .
     command: >
       sh -c "
-             python manage.py collectstatic --noinput &&
              python manage.py migrate &&
              python manage.py loaddata contacts/fixtures/contacts.json &&
              python manage.py loaddata contacts/fixtures/groups.json &&
              python manage.py loaddata contacts/fixtures/users.json &&
-             python manage.py runserver localhost:8000"
+             python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/django-contacts/
     ports:
