--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     build: .
     command: >
       sh -c "
+             python manage.py collectstatic
              python manage.py migrate &&
              python manage.py loaddata contacts/fixtures/contacts.json &&
              python manage.py loaddata contacts/fixtures/auth_groups.json &&
